cmake_minimum_required(VERSION 3.8)
project(leet_code)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(Algorithm/ListSolution)
add_subdirectory(Algorithm/StringSolution)
add_subdirectory(Algorithm/ArraySolution)
add_subdirectory(Algorithm/SortSolution)
add_subdirectory(Algorithm/NumberSolution)
add_subdirectory(Algorithm/TreeSolution)


add_subdirectory(DesignPattern/DecoratorPattern)

add_subdirectory(LeetCode)

add_subdirectory(Alpha-Net)
